@@ -1,3 +1,7 @@
+2008-11-24  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* config/mips/mips.h (ASM_OUTPUT_DEBUG_LABEL): Define.
+
 2008-11-24  Maxim Kuvyrkov  <maxim@codesourcery.com>
 
 	PR target/35018
